[project]
name = "javatraining_documents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.3.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-enumerate-headings-plugin>=0.6.2",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-include-markdown-plugin>=7.2.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-print-site-plugin>=2.8",
    "mkdocs-table-reader-plugin>=3.1.0",
    "zensical>=0.0.26",
]
